--- a/src/learning_zig/00-index.html
+++ b/src/learning_zig/00-index.html
@@ -15,7 +15,7 @@ permalink: "/learning_zig/"
 	</section>
 
 	<section>
-		<h2 tabindex=-1 id=toc><a href=#toc aria-hidden=true>Translations</a></h2>
+		<h2 tabindex=-1 id=translations><a href=#translations aria-hidden=true>Translations</a></h2>
 		<ol>
 			<li><a href="https://zigcc.github.io/learning-zig/index.html">Chinese</a> - by Jiacai Liu
 		</ol>
